# moveit-neural-collision

./: README.md  external.repos.yaml
collision/: CMakeLists.txt  package.xml
collision/data/: model.mtl
collision/include/collision/: datapoint.hpp
collision/src/: dist.cpp  main.cpp
cuda_collision_checking/: CMakeLists.txt  package.xml
cuda_collision_checking/include/cuda_collision_checking/: cuda_collision_checking.hpp
cuda_collision_checking/src/: cuda_collision_checking.cu  main.cu
ros2-tiny-cuda-nn/: CMakeLists.txt  package.xml  tiny-cuda-nn-extras.cmake
